--- a/apps/sonarphony/mainWindow.ui
+++ b/apps/sonarphony/mainWindow.ui
@@ -61,7 +61,7 @@
      <x>0</x>
      <y>0</y>
      <width>875</width>
-     <height>27</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -187,32 +187,6 @@
    </attribute>
    <widget class="QWidget" name="dockWidgetContents">
     <layout class="QGridLayout" name="gridLayout_3">
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_3">
-       <property name="toolTip">
-        <string>Minimum range on latest ping.</string>
-       </property>
-       <property name="text">
-        <string>Min Range</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="0">
-      <widget class="QLabel" name="label_4">
-       <property name="toolTip">
-        <string>Maximum range on latest ping.</string>
-       </property>
-       <property name="text">
-        <string>Max Range</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_2">
        <property name="toolTip">
@@ -258,6 +232,85 @@
        </item>
       </layout>
      </item>
+     <item row="6" column="2">
+      <widget class="QLabel" name="maxRange">
+       <property name="text">
+        <string>-- ft</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="2">
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="5" column="2">
+      <widget class="QLabel" name="minRange">
+       <property name="text">
+        <string>-- ft</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="toolTip">
+        <string>Water temperature.</string>
+       </property>
+       <property name="text">
+        <string>Temperature</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="2">
+      <widget class="QProgressBar" name="batteryCharge">
+       <property name="value">
+        <number>0</number>
+       </property>
+       <property name="format">
+        <string>%p %</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="2">
+      <widget class="QLabel" name="batteryVoltage">
+       <property name="toolTip">
+        <string>Battery voltage.</string>
+       </property>
+       <property name="text">
+        <string>-- V</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="toolTip">
+        <string>Maximum range on latest ping.</string>
+       </property>
+       <property name="text">
+        <string>Max Range</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+       </property>
+      </widget>
+     </item>
      <item row="7" column="0">
       <widget class="QLabel" name="label">
        <property name="toolTip">
@@ -281,43 +334,23 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="2">
-      <widget class="QLabel" name="minRange">
+     <item row="4" column="2">
+      <widget class="QLabel" name="gain">
        <property name="text">
-        <string>-- ft</string>
+        <string>-- %</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
        </property>
       </widget>
      </item>
-     <item row="6" column="2">
-      <widget class="QLabel" name="maxRange">
-       <property name="text">
-        <string>-- ft</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="2">
-      <widget class="QProgressBar" name="batteryCharge">
-       <property name="value">
-        <number>0</number>
-       </property>
-       <property name="format">
-        <string>%p %</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_5">
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_3">
        <property name="toolTip">
-        <string>Water temperature.</string>
+        <string>Minimum range on latest ping.</string>
        </property>
        <property name="text">
-        <string>Temperature</string>
+        <string>Min Range</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
@@ -337,38 +370,12 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="2">
-      <widget class="QLabel" name="gain">
+     <item row="9" column="0" colspan="3">
+      <widget class="QLabel" name="timeLabel">
        <property name="text">
-        <string>-- %</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+        <string>---- -- -- --:--:--.---</string>
        </property>
       </widget>
-     </item>
-     <item row="8" column="2">
-      <widget class="QLabel" name="batteryVoltage">
-       <property name="toolTip">
-        <string>Battery voltage.</string>
-       </property>
-       <property name="text">
-        <string>-- V</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="2">
-      <spacer name="verticalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
      </item>
     </layout>
    </widget>
