--- a/apps/sonarphony/mainWindow.ui
+++ b/apps/sonarphony/mainWindow.ui
@@ -104,7 +104,7 @@
     </layout>
    </widget>
   </widget>
-  <widget class="QDockWidget" name="dockWidget_3">
+  <widget class="QDockWidget" name="controlsDockWidget">
    <property name="windowTitle">
     <string>Controls</string>
    </property>
@@ -374,6 +374,45 @@
       <widget class="QLabel" name="timeLabel">
        <property name="text">
         <string>---- -- -- --:--:--.---</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="timelineDockWidget">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="features">
+    <set>QDockWidget::AllDockWidgetFeatures</set>
+   </property>
+   <property name="windowTitle">
+    <string>Timeline</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_4">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QPushButton" name="timePlayButton">
+       <property name="text">
+        <string>▶️</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="timePauseButton">
+       <property name="text">
+        <string>⏸️</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="timeFastButton">
+       <property name="text">
+        <string>⏭️</string>
        </property>
       </widget>
      </item>
