--- a/apps/sonarphony/mainWindow.ui
+++ b/apps/sonarphony/mainWindow.ui
@@ -163,6 +163,25 @@
       </widget>
      </item>
      <item>
+      <widget class="QComboBox" name="frequencyCB">
+       <item>
+        <property name="text">
+         <string>80</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>125</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>200</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -194,6 +213,85 @@
        </property>
        <property name="text">
         <string>Depth</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="2">
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="6" column="2">
+      <widget class="QLabel" name="maxRange">
+       <property name="text">
+        <string>-- ft</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="toolTip">
+        <string>Water temperature.</string>
+       </property>
+       <property name="text">
+        <string>Temperature</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="2">
+      <widget class="QProgressBar" name="batteryCharge">
+       <property name="value">
+        <number>0</number>
+       </property>
+       <property name="format">
+        <string>%p %</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="2">
+      <widget class="QLabel" name="temperature">
+       <property name="text">
+        <string>-- C</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="2">
+      <widget class="QLabel" name="minRange">
+       <property name="text">
+        <string>-- ft</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="toolTip">
+        <string>Minimum range on latest ping.</string>
+       </property>
+       <property name="text">
+        <string>Min Range</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
@@ -232,72 +330,6 @@
        </item>
       </layout>
      </item>
-     <item row="6" column="2">
-      <widget class="QLabel" name="maxRange">
-       <property name="text">
-        <string>-- ft</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
-       </property>
-      </widget>
-     </item>
-     <item row="10" column="2">
-      <spacer name="verticalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="5" column="2">
-      <widget class="QLabel" name="minRange">
-       <property name="text">
-        <string>-- ft</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_5">
-       <property name="toolTip">
-        <string>Water temperature.</string>
-       </property>
-       <property name="text">
-        <string>Temperature</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="2">
-      <widget class="QProgressBar" name="batteryCharge">
-       <property name="value">
-        <number>0</number>
-       </property>
-       <property name="format">
-        <string>%p %</string>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="2">
-      <widget class="QLabel" name="batteryVoltage">
-       <property name="toolTip">
-        <string>Battery voltage.</string>
-       </property>
-       <property name="text">
-        <string>-- V</string>
-       </property>
-      </widget>
-     </item>
      <item row="6" column="0">
       <widget class="QLabel" name="label_4">
        <property name="toolTip">
@@ -311,23 +343,20 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="0">
+     <item row="11" column="0" colspan="3">
+      <widget class="QLabel" name="timeLabel">
+       <property name="text">
+        <string>---- -- -- --:--:--.---</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="0">
       <widget class="QLabel" name="label">
        <property name="toolTip">
         <string>Battery life remaining.</string>
        </property>
        <property name="text">
         <string>Battery</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="2">
-      <widget class="QLabel" name="temperature">
-       <property name="text">
-        <string>-- C</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
@@ -344,16 +373,10 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_3">
-       <property name="toolTip">
-        <string>Minimum range on latest ping.</string>
-       </property>
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_7">
        <property name="text">
-        <string>Min Range</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+        <string>Frequency</string>
        </property>
       </widget>
      </item>
@@ -370,10 +393,34 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="0" colspan="3">
-      <widget class="QLabel" name="timeLabel">
+     <item row="10" column="2">
+      <widget class="QLabel" name="batteryVoltage">
+       <property name="toolTip">
+        <string>Battery voltage.</string>
+       </property>
        <property name="text">
-        <string>---- -- -- --:--:--.---</string>
+        <string>-- V</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>Beam Width</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="2">
+      <widget class="QLabel" name="frequencyLabel">
+       <property name="text">
+        <string>-- kHz</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="2">
+      <widget class="QLabel" name="beamWidthLabel">
+       <property name="text">
+        <string>-- deg</string>
        </property>
       </widget>
      </item>
